--- a/test/stars.css
+++ b/test/stars.css
@@ -7,7 +7,8 @@ body {
 body {
   background-color: black;
   /* #31102F; */
-  background: radial-gradient(ellipse at center, rgba(49,16,47,1) 0%,rgba(40,11,41,1) 100%);
+  /* background: radial-gradient(ellipse at center, #16213e 40%,#1a1a2e 100%); */
+  background-color: #1a1a2e;
   /* background: radial-gradient(ellipse at center, #31102f 0%, #280b29 100%); */
 }
 
@@ -18,6 +19,11 @@ body {
   height: 16rem;
   height: 100vh;
   z-index: 1;
+}
+@media(max-width: 500px){
+  #stars {
+    height: 300px;
+  }
 }
 h1
 {
