--- a/Optical/public/css/style.css
+++ b/Optical/public/css/style.css
@@ -22,6 +22,37 @@ body{
 #banner,#limited-edition{
     padding: 11% 0;
 }
+
+
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    border-radius: 5%;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
 #categories{
     padding-bottom: 10% ;
 }
@@ -61,8 +92,11 @@ body{
     
     
 }
+#limited-edition, #on-sale h5{
+    font-size: 1rem;
+}
 #limited-edition img, #on-sale img, .products img{
- padding: 30px;
+ padding: 10px;
  background-color: #f4f9f9;
  border-radius: 5%;
 
@@ -71,6 +105,7 @@ body{
 #limited-edition .btn,  #on-sale .btn{
     background-color:#a1cae2 ; 
     color: white; 
+    font-size: 0.65rem;
 }
 #limited-edition .card,  #on-sale .card{
     border-radius: 5%; 
